# onchain-zkml

./: Cargo.toml  README.md  package.json  run.js
circuit/: Cargo.toml
circuit/guest/: Cargo.toml
circuit/src/: lib.rs
engine/: Cargo.toml
engine/src/: error.rs  lib.rs  nn.rs  result.rs
model/: requirements.txt  train_dense.py
prover/: Cargo.toml
prover/src/: main.rs
