[package]
name = "onchain-zkml-engine"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
sha2 = { version = "0.10", default-features = false }
thiserror = { version = "2", default-features = false }

[dev-dependencies]
serde_json = "1"
